2004-10-01  Matthias Clasen  <mclasen@redhat.com>

	* modules/input/iminuktitut.c: Fix the spelling of Inuktitut
	in several places.  (#154176, John Austin)

2004-09-30  Paolo Borelli  <pborelli@katamail.com>

	* tests/testellipsize.c: exit on close.

2004-09-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmain.c: Make --g-fatal-warnings a G_OPTION_ARG_NONE,
	since it doesn't take an argument.

2004-09-29  Christopher Blizzard  <blizzard@redhat.com>

	* gtk/gtkmenutoolbutton.h: Remove trailing semicolon on
	G_END_DECLS

2004-09-29  Paolo Borelli  <pborelli@katamail.com>

	* tests/testtoolbar.c: add a GtkMenuToolButton.

2004-09-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c (gtk_icon_view_move_cursor_left_right) 
	(gtk_icon_view_move_cursor_start_end) 
	(gtk_icon_view_move_cursor_page_up_down) 
	(gtk_icon_view_move_cursor_up_down): Handle an empty icon
	view gracefully.  (#152486)

	Allow keynav to selectable labels (#138085, David Hawthorne):
	
	* gtk/gtkdialog.c (gtk_dialog_map): Skip selectable labels when
	looking for the initial focus widget.

	* gtk/gtklabel.c (gtk_label_focus): Remove to put selectable labels 
	in the regular focus chain again.

2004-09-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_render): Don't
	reuse insensitive pixbufs across multiple rows.  (#153984, Milosz
	Derezynski)

	* gtk/gtkmain.c (gtk_parse_args): Use gtk_get_option_group() 
	to obtain an option group with correctly set pre- and post-
	parse hooks, instead of manually calling the hooks. This fixes
	a problem with setting the program class in the gdk preparse
	hook.  (#153788, Robert Ögren)

2004-09-27  Matthias Clasen  <mclasen@redhat.com>

	Fix #153082:
	
	* gtk/gtkmain.c (do_pre_parse_initialization): Don't call gdk_parse_args()
	here, we don't want to parse args twice.
	(gtk_init_with_args): Add the ugid check here as well.
	(gtk_parse_args): Add the gdk options to the main option group as well.
